force-app/main/default/objects/BusinessTravelRequest__c/BusinessTravelRequest__c.object-meta.xml
<CustomObject>
    <label>Business Travel Request</label>
    <nameField>
        <displayFormat>BTR-{000000}</displayFormat>
        <label>Business Travel Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Travel Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>