force-app/main/default/objects/BusinessTravelRequest__c/fields/BusinessTravelDestination__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelDestination__c</fullName>
    <label>Business Travel Destination</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>An Giang</fullName>
            </value>
            <value>
                <fullName>Bạc Liêu</fullName>
            </value>
            <value>
                <fullName>Bắc Cạn</fullName>
            </value>
            <value>
                <fullName>Bắc Giang</fullName>
            </value>
            <value>
                <fullName>Bắc Ninh</fullName>
            </value>
            <value>
                <fullName>Bến Tre</fullName>
            </value>
            <value>
                <fullName>Bình Dương</fullName>
            </value>
            <value>
                <fullName>Bình Định</fullName>
            </value>
            <value>
                <fullName>Bình Phước</fullName>
            </value>
            <value>
                <fullName>Bình Thuận</fullName>
            </value>
            <value>
                <fullName>Cà Mau</fullName>
            </value>
            <value>
                <fullName>Cao Bằng</fullName>
            </value>
            <value>
                <fullName>Cần Thơ</fullName>
            </value>
            <value>
                <fullName>Đà Nẵng</fullName>
            </value>
            <value>
                <fullName>Daklak</fullName>
            </value>
            <value>
                <fullName>Đồng Nai</fullName>
            </value>
            <value>
                <fullName>Đồng Tháp</fullName>
            </value>
            <value>
                <fullName>Gia Lai</fullName>
            </value>
            <value>
                <fullName>Hà Giang</fullName>
            </value>
            <value>
                <fullName>Hà Nam</fullName>
            </value>
            <value>
                <fullName>Hà Nội</fullName>
            </value>
            <value>
                <fullName>Hà Tĩnh</fullName>
            </value>
            <value>
                <fullName>Hải Dương</fullName>
            </value>
            <value>
                <fullName>Hải Phòng</fullName>
            </value>
            <value>
                <fullName>Hòa Bình</fullName>
            </value>
            <value>
                <fullName>Hồ Chí Minh</fullName>
            </value>
            <value>
                <fullName>Hưng Yên</fullName>
            </value>
            <value>
                <fullName>Khánh Hòa</fullName>
            </value>
            <value>
                <fullName>Kiên Giang</fullName>
            </value>
            <value>
                <fullName>Kon Tum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>