force-app/main/default/objects/BusinessTravelRequest__c/fields/BusinessTravelStatus__c.field-meta.xml
<CustomField>
    <fullName>BusinessTravelStatus__c</fullName>
    <label>Business Travel Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>