force-app/main/default/objects/BusinessTravelRequest__c/fields/EstimateCost__c.field-meta.xml
<CustomField>
    <fullName>EstimateCost__c</fullName>
    <label>Estimate Expense</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>