force-app/main/default/objects/BusinessTravelRequest__c/fields/IsBlock__c.field-meta.xml
<CustomField>
    <fullName>IsBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBlock</label>
    <type>Checkbox</type>
</CustomField>