force-app/main/default/objects/BusinessTravelRequest__c/fields/LongTrip__c.field-meta.xml
<CustomField>
    <fullName>LongTrip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long Trip</label>
    <type>Checkbox</type>
</CustomField>