force-app/main/default/objects/BusinessTravelRequest__c/fields/ManagerApproved__c.field-meta.xml
<CustomField>
    <fullName>ManagerApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Approved</label>
    <type>Checkbox</type>
</CustomField>