force-app/main/default/objects/BusinessTravelRequest__c/fields/ManagerinTrip__c.field-meta.xml
<CustomField>
    <fullName>ManagerinTrip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ManagerinTrip</label>
    <type>Checkbox</type>
</CustomField>