force-app/main/default/objects/BusinessTravelRequest__c/fields/MergedwithRequest__c.field-meta.xml
<CustomField>
    <fullName>MergedwithRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merged with Request</label>
    <referenceTo>BusinessTravelRequest__c</referenceTo>
    <relationshipLabel>Business Travel Requests</relationshipLabel>
    <relationshipName>Business_Travel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>