force-app/main/default/objects/BusinessTravelRequest__c/fields/NotesandRemarks__c.field-meta.xml
<CustomField>
    <fullName>NotesandRemarks__c</fullName>
    <label>Notes and Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>