force-app/main/default/objects/BusinessTravelRequest__c/fields/NumberofVisitLocation__c.field-meta.xml
<CustomField>
    <fullName>NumberofVisitLocation__c</fullName>
    <formula>PICKLISTCOUNT( BusinessTravelDestination__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Visit Location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>