force-app/main/default/objects/BusinessTravelRequest__c/fields/Oversea__c.field-meta.xml
<CustomField>
    <fullName>Oversea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oversea</label>
    <type>Checkbox</type>
</CustomField>