force-app/main/default/objects/BusinessTravelRequest__c/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; CASESAFEID(Id),  OwnerId , &quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>