force-app/main/default/objects/BusinessTravelRequest__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Business Travel Requests</relationshipLabel>
    <relationshipName>Business_Travel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>