force-app/main/default/objects/BusinessTravelRequest__c/fields/PurposeofBusinessTravel__c.field-meta.xml
<CustomField>
    <fullName>PurposeofBusinessTravel__c</fullName>
    <label>Purpose of Business Travel</label>
    <type>TextArea</type>
</CustomField>