force-app/main/default/objects/BusinessTravelRequest__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <label>Transportation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airplane</fullName>
            </value>
            <value>
                <fullName>Company Car</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Bus line</fullName>
            </value>
            <value>
                <fullName>Rental Motorbike</fullName>
            </value>
            <value>
                <fullName>Self Motorbike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>