force-app/main/default/objects/BusinessTravelRequest__c/fields/TransportationInformation__c.field-meta.xml
<CustomField>
    <fullName>TransportationInformation__c</fullName>
    <label>Transportation Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>