force-app/main/default/objects/BusinessTravelRequest__c/fields/Year_Flow__c.field-meta.xml
<CustomField>
    <fullName>Year_Flow__c</fullName>
    <formula>Text(Year( From__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Flow</label>
    <type>Text</type>
</CustomField>