force-app/main/default/objects/BusinessTravelRequest__c/fields/Year_Rerpot__c.field-meta.xml
<CustomField>
    <fullName>Year_Rerpot__c</fullName>
    <formula>Year ( From__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>