force-app/main/default/objects/BusinessTravelRequest__c/validationRules/Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR 
(
 YEAR( From__c )  &lt; YEAR(TODAY()),
 YEAR(To__c) &lt; YEAR(TODAY()),
 From__c &gt; To__c
)</errorConditionFormula>
    <errorMessage>Input dates are invalid! Please input again!</errorMessage>
</ValidationRule>