force-app/main/default/objects/BusinessTravelRequest__c/validationRules/Long_Trip_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Long_Trip_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 LongTrip__c = False,
 From__c &lt;&gt; To__c)</errorConditionFormula>
    <errorMessage>Short trip cannot have multiple travel days!</errorMessage>
</ValidationRule>