force-app/main/default/objects/BusinessTravelRequest__c/listViews/TCL_BOD_BusinessTravelRequest.listView-meta.xml
<ListView>
    <fullName>TCL_BOD_BusinessTravelRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL - BOD for Employee, Trave and Salary</label>
    <queue>TCL_BOD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>